k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      compoenent: worker
  template:
    metadata:
      labels:
        compoenent: worker
    spec:
      containers:
        - name: worker
          image: hakunamatata007/multi-worker
